# hte-streamlit

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
data/: 250408_HTE_dataset.h5  250608_HTE.h5  250616_HTE.xlsx
data/Old/: HTE-overview_250204.xlsx  HTE-overview_250408.xlsx  HTE-overview_250414.h5
data/Raw_Data/: results_MRG-059-ZN-12B.csv  results_MRG-059-ZO-6A.csv  results_MRG-059-ZO-7A.csv
src/hte_streamlit/: Kinetic_check.py  __init__.py  _version.py  data_processing_workflow.py  experiments_database.py  file_processing.py  fit.py  fitting_ODE.py  rate_analysis.py  reaction_ODE.py  rxn_ode_fitting.py  visualize_ODE_results.py
src/hte_streamlit/plotting/: data_processing_workflow.py  visualize_ODE_results.py
src/hte_streamlit/streamlit_app/: Home.py
src/hte_streamlit/streamlit_app/pages/: Data_Upload_and_Download.py  Data_Visualization.py  Plotting_Rates.py
