[metadata]
name = hte_streamlit
description = High-throughput experimentation data analysis and visualization tool
author = Jacob Schneidewind
author_email = pyH2A.pypi@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jschneidewind/hte-streamlit
project_urls =
    Bug Tracker = https://github.com/jschneidewind/hte-streamlit/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    streamlit
    pandas
    numpy
    plotly
    matplotlib
    scipy
    h5py
    tables

[options.packages.find]
where = src

[options.package_data]
hte_streamlit = py.typed

[flake8]
max-line-length = 100
extend-ignore = E203
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 100

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test
python_functions = test_*
addopts = 
    --verbose
    --doctest-modules
    --cov=hte_streamlit
    --cov-report=term-missing
    --cov-report=xml
    --cov-report=html

[coverage:run]
source = hte_streamlit
omit =
    tests/*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-plotly.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-h5py.*]
ignore_missing_imports = True

[mypy-streamlit.*]
ignore_missing_imports = True